一些改动和BUG修复，增加了密码本页面

--- a/layout/pwdbook.ejs
+++ b/layout/pwdbook.ejs
@@ -172,7 +172,7 @@
             <br />
                 基于<a href="https://masterpassword.app/" target="_blank">MASTER PASSWORD</a> APP。
             <br />
-                程序完全<a href="" target="_blank">开源</a>。
+                程序完全<a href="https://github.com/lrnman/mayBe" target="_blank">开源</a>。
             </p>
         </section>
     </section>
