--- a/source/css/components/_pwdbook.scss
+++ b/source/css/components/_pwdbook.scss
@@ -30,7 +30,7 @@ padding: 0 !important;
 
       > section {
       @include padding((_size(padding) * 2) - 1, (_size(padding) * 2));
-        border-top: solid 2px _palette(alt, border);
+        border-top: dotted 2px _palette(alt, border);
 
         &:first-child {
         @include padding((_size(padding) * 2) - 1, (_size(padding) * 2), (_size(padding), 0, 0, 0));
